Payment Request for Payment Payment Request for Approval Payment Processing PDF and Image show and some extra Changes

--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=db_indusuno_vend;User ID=iuvendor;Password=$Isth3k3y" providerName="System.Data.SqlClient" />-->
-    <add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=ven_indus;User ID=sa;Password=CeStfD#3w5U4c$" providerName="System.Data.SqlClient" />
-    <!--<add name="IndusunoVendConSetting" connectionString="Data Source=103.48.51.121,1232;Initial Catalog=ven_indus;User ID=indus_dus;Password=ven#dus9@in" providerName="System.Data.SqlClient" />-->
+    <!--<add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=ven_indus;User ID=sa;Password=CeStfD#3w5U4c$" providerName="System.Data.SqlClient" />-->
+    <add name="IndusunoVendConSetting" connectionString="Data Source=103.48.51.121,1232;Initial Catalog=ven_indus;User ID=indus_dus;Password=ven#dus9@in" providerName="System.Data.SqlClient" />
     <add name="IndusunoMainConSetting" connectionString="data source=202.143.97.139,65262;initial catalog=db_indusuno;user id=sa;password=CeStfD#3w5U4c$;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
