User wise Data Now use user to current database

--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <configSections>    
+  <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -13,9 +13,10 @@
   </configSections>
   <connectionStrings>
     <!--<add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=db_indusuno_vend;User ID=iuvendor;Password=$Isth3k3y" providerName="System.Data.SqlClient" />-->
-  <add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=ven_indus;User ID=sa;Password=CeStfD#3w5U4c$" providerName="System.Data.SqlClient" />
-  <!--<add name="IndusunoVendConSetting" connectionString="Data Source=103.48.51.121,1232;Initial Catalog=ven_indus;User ID=indus_dus;Password=ven#dus9@in" providerName="System.Data.SqlClient" />-->
-  <add name="IndusunoMainConSetting" connectionString="data source=202.143.97.139,65262;initial catalog=db_indusuno;user id=sa;password=CeStfD#3w5U4c$;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="IndusunoVendConSetting" connectionString="Data Source=202.143.97.139,65262;Initial Catalog=ven_indus;User ID=sa;Password=CeStfD#3w5U4c$" providerName="System.Data.SqlClient" />
+    <!--<add name="IndusunoVendConSetting" connectionString="Data Source=103.48.51.121,1232;Initial Catalog=ven_indus;User ID=indus_dus;Password=ven#dus9@in" providerName="System.Data.SqlClient" />-->
+    <add name="IndusunoMainConSetting" connectionString="data source=202.143.97.139,65262;initial catalog=db_indusuno;user id=sa;password=CeStfD#3w5U4c$;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -27,7 +28,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.1" />
+    <compilation targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
     <authentication mode="Forms">
       <forms loginUrl="~/Home/Index" timeout="2880" />
@@ -106,3 +107,4 @@
     </Vendor_Indusuno.Properties.Settings>
   </applicationSettings>
 </configuration>
+<!--ProjectGuid: 94BAF304-20E4-4253-8277-4A6390CA612B-->
